--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,13 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # App Specific Properties for Email Verification
 app.verification.email.from=no-reply@ecommerce.com
 app.frontend.verify-url=http://localhost:8080/api/users/verify?token=
+
+
+
+# JWT Configuration
+jwt.secret=your-very-long-secret-key-at-least-256-bits-change-this-in-production
+jwt.expiration=86400000
+
+# Logging
+logging.level.com.ecommerce.demo=INFO
+logging.file.name=logs/ecommerce.log
